overview: Modify WindowGrid::PositionWindows when ignoring an item.

Previously it would calculate positions including the ignored item and
shift the indices of the items placed behind the ignored item. Now it
calculates positions ignoring the item.

Test: Added tests
Bug: 842957
Change-Id: Idc56917e8be76dc91721d3b02357834ba22a9258
Reviewed-on: https://chromium-review.googlesource.com/1058833
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558753}
Former-commit-id: ccbeab673ac7218b9d5636cb507362d7e153ab3a